syntax = "proto3";

import "google/protobuf/wrappers.proto";

package grpc;

message PublishRequest {
  string topic = 1;
  bytes message = 2;
  map<string, string> metadata = 3;
}

message PublishResponse {}

message SubscribeRequest {
  string topic = 1;
  string subscription_id = 2;
  map<string, string> filter = 3;
  google.protobuf.UInt64Value retention_period = 4;
  google.protobuf.UInt64Value visibility_timeout = 5;
  
  // Other options go here...

}

message SubscribeResponse {
  string message_id = 1;
  bytes message = 2;
  map<string, string> metadata = 3;
}

message AckRequest {
  string topic = 1;
  string subscription_id = 2;
  string message_id = 3;
}

message AckResponse {}

service PubSub {
  rpc Publish(PublishRequest) returns (PublishResponse) {}
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {}
  rpc Ack(AckRequest) returns (AckResponse) {}
}
